k3s-userapps/spoolman/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spoolman
  namespace: spoolman
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/pod: spoolman
  template:
    metadata:
      labels:
        app.kubernetes.io/pod: spoolman
    spec:
      volumes:
        - name: spoolman
          persistentVolumeClaim:
            claimName: spoolman
      containers:
        - image: 'ghcr.io/donkie/spoolman:0.22.0'
          imagePullPolicy: IfNotPresent
          name: spoolman
          livenessProbe:
            httpGet:
              path: /metrics
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /metrics
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          ports:
            - containerPort: 8000
              protocol: TCP
              name: "http"
          volumeMounts:
            - mountPath: /home/app/.local/share/spoolman
              name: spoolman
