k3s-userapps/spoolman/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: spoolman
  namespace: spoolman
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app.kubernetes.io/pod: spoolman
  type: ClusterIP
