k3s-userapps/spoolman/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: acme-issuer
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://spoolman.kirillorlov.pro"
    gethomepage.dev/group: "3D Printer"
    gethomepage.dev/name: Spoolman
    gethomepage.dev/pod-selector: "app.kubernetes.io/pod=spoolman"
    gethomepage.dev/widget.type: "spoolman"
    gethomepage.dev/widget.url: "https://spoolman.kirillorlov.pro"
    gethomepage.dev/widget.spoolIds: "[ 1, 2, 3, 4 ]"
  name: spoolman
  namespace: spoolman
spec:
  rules:
  - host: spoolman.kirillorlov.pro
    http:
      paths:
      - backend:
          service:
            name: spoolman
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - spoolman.kirillorlov.pro
    secretName: spoolman-tls
